# gazebo_plugin_tutorials

./: .gitignore  LICENSE  README.md
joint_control_plugin/: CMakeLists.txt  README.md  package.xml
joint_control_plugin/launch/: joint.launch
joint_control_plugin/models/t_model/: model.config  model.sdf
joint_control_plugin/src/: joint_controller_plugin.cc
joint_control_plugin/worlds/: t_model.world
light_control_ros/: CMakeLists.txt  README.md  package.xml
light_control_ros/launch/: lightcontroller.launch  simple_lightcontroller.launch
light_control_ros/src/: lightcontroller_ros_plugin.cc  simple_lightcontroller_ros_plugin.cc
light_control_ros/worlds/: light.world  simple_light.world
light_move_plugin/: CMakeLists.txt  README.md  package.xml
light_move_plugin/launch/: light.launch
light_move_plugin/src/: light_move_model_plugin.cc
light_move_plugin/worlds/: move_light_model.world
model_plugin/: CMakeLists.txt  README.md  package.xml
model_plugin/launch/: custom_model.launch  model.launch
model_plugin/models/cylinder/: model.config  model.sdf
model_plugin/src/: my_model_plugin.cc
model_plugin/worlds/: custom_model.world  model.world
model_plugin_ros/: CMakeLists.txt  README.md  package.xml
model_plugin_ros/launch/: rosplugin.launch  simple_rosplugin.launch
model_plugin_ros/src/: model_ros_plugin.cc  simple_model_ros_plugin.cc
model_plugin_ros/worlds/: model.world  simple_model.world
subscriber_model_plugin/: CMakeLists.txt  README.md  package.xml
subscriber_model_plugin/launch/: gazebo_subscriber.launch
subscriber_model_plugin/src/: gazebo_subscriber.cc
subscriber_model_plugin/worlds/: model.world
world_plugin/: CMakeLists.txt  README.md  package.xml
world_plugin/launch/: gazebo_subscriber.launch  gazebo_world_plugin.launch
world_plugin/src/: world_gazebo_plugin.cc
world_plugin/worlds/: gazebo.world
